testdata/baselines/reference/submodule/conformance/extendsTag6.errors.txt
foo.js(12,17): error TS8010: Type annotations can only be used in TypeScript files.


==== foo.js (1 errors) ====
    /**
     * @constructor
     */
    class A {
        constructor() {}
    }
    
    /**
     * @extends { A }
     * @constructor
     */
    class B extends A {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        constructor() {
            super();
        }
    }
    